@@ -9,13 +9,18 @@ import com.i3.delivery.domain.store.repository.StoreRepository;
 import com.i3.delivery.domain.store.repository.custom.impl.StoreRepositoryImpl;
 import com.i3.delivery.domain.user.entity.User;
 import com.i3.delivery.domain.user.repository.UserRepository;
+import com.i3.delivery.global.exception.store.StoreNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -50,9 +55,12 @@ public class StoreService {
         return StoreRegistrationResponseDto.fromEntity(store);
     }
 
-    public List<StoreInfoResponseDto> getStores() {
+    public Page<StoreInfoResponseDto> getStores(Pageable pageable, int size) {
 
-        return storeRepository.findAll().stream().map(store -> new StoreInfoResponseDto()).toList();
+        pageable = PageRequest.of(pageable.getPageNumber(), size, pageable.getSort());
+
+        return storeRepository.findAll(pageable).
+                map(StoreInfoResponseDto::fromEntity);
     }
 
     public StoreInfoResponseDto getStore(Long id) {
@@ -62,15 +70,19 @@ public class StoreService {
         return StoreInfoResponseDto.fromEntity(store);
     }
 
-    public List<StoreInfoResponseDto> getStoresByKeyword(String keyword) {
+    @Transactional
+    public List<StoreInfoResponseDto> getStoresByKeyword(String keyword,Pageable pageable, int size) {
 
-        return storeRepositoryImpl.findAll(keyword).stream().map(store -> new StoreInfoResponseDto()).toList();
+        pageable = PageRequest.of(pageable.getPageNumber(), size, pageable.getSort());
+
+        return storeRepositoryImpl.findAll(keyword, pageable)
+                .stream().map(StoreInfoResponseDto::fromEntity).collect(Collectors.toList());
     }
 
     @Transactional
     public StoreEditResponseDto updateStore(Long id, StoreEditRequsetDto storeEditRequsetDto) {
 
-        Store store = storeRepository.findById(id).orElseThrow(IllegalArgumentException::new);
+        Store store = storeRepository.findById(id).orElseThrow(StoreNotFoundException::new);
 
         Category category = findCategory(storeEditRequsetDto);
         store.update(storeEditRequsetDto,category);
@@ -86,7 +98,7 @@ public class StoreService {
     @Transactional
     public ResponseEntity<String> deleteStore(Long id) {
 
-        Store store = storeRepository.findById(id).orElseThrow(IllegalArgumentException::new);
+        Store store = storeRepository.findById(id).orElseThrow(StoreNotFoundException::new);
 
         store.delete();
 
@@ -95,14 +107,14 @@ public class StoreService {
     }
 
     // TODO 여기서 transanctional 이 필요할까요?? 만약 쓴다면 readOnly = true 로 설정해주세요.
-    @Transactional(readOnly = true)
-    public List<StoreReviewResponseDto> getStoreAvgAndReviews(String name) {
+    @Transactional
+    public Page<StoreReviewResponseDto> getStoreAvgAndReviews(String name,Pageable pageable,int size) {
 
-        return storeRepositoryImpl.findStoreAvgAndReviews(name);
+        return storeRepositoryImpl.findStoreAvgAndReviews(name,pageable,size);
     }
 
     public Store findStore(Long storeId) {
 
-        return storeRepository.findById(storeId).orElseThrow(IllegalArgumentException::new);
+        return storeRepository.findById(storeId).orElseThrow(StoreNotFoundException::new);
     }
 }
